fix cdrom icon alignment
Setting it to text-top seems to work far better inside menu items.

--- a/pve.css
+++ b/pve.css
@@ -8,7 +8,6 @@
     height: 16px;
     vertical-align: bottom;
     display: inline-block;
-
 }
 
 .fa-cpu::before {
@@ -21,6 +20,7 @@
 }
 
 .fa-cdrom::before {
+    vertical-align: text-top;
     background-image: url(../images/icon-cd-drive.svg);
 }
 
